<resources>
    <string name="app_name">Ingridentify</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="capture">Capture</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="email_is_invalid">Email is invalid</string>
    <string name="password_must_be_at_least_n_characters">Password must be at least %d characters</string>
    <string name="failed_to_start_camera">Failed to start camera</string>
    <string name="camera_permission_denied">Camera permission is needed to use this feature</string>

    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="failed_to_capture_image">Failed to capture image</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="title_history">Your latest Scan</string>
    <string name="email_hint">user@gmail.com\n</string>
    <string name="picture_user">User Picture</string>
    <string name="edit">edit profile\n</string>
    <string name="welcome">Welcome!</string>
    <string name="no_history_found">No history found</string>
    <string name="title_recipe">Recipe</string>
    <string name="title_detail">Recipe Detail</string>
    <string name="no_recipe_found">No recipe found</string>
    <string name="recipe_test">Avocado Juice\nIndulge in a refreshing treat with this simple yet delightful avocado juice recipe. Creamy ripe avocados blended to perfection with a touch of sugar and chilled water create a smooth, satisfying drink. Optionally, a hint of sweetened condensed milk elevates its richness. Garnish with ice for a cool twist, and relish this creamy, sweet concoction – a perfect balance of flavors in every sip.\n\nIngredients :\n2 ripe avocados\n2-3 tablespoons of sugar (adjust to taste)\n1 1/2 cups of cold water\nIce cubes (optional)\nSweetened condensed milk (optional, for extra sweetness)</string>
    <string name="detail_recipe">Detail Recipe</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="username">Username</string>
    <string name="fab_favorite">Add to your favorite</string>
    <string name="title_recipe">Recipe</string>
    <string name="based_photo">Based on Scan</string>
    <string name="food_recomend">Food recipe recomendation</string>
    <string name="detail_recipe">Detail Recipe</string>
    <string name="recipe_test">test</string>
    <string name="your_favorite">Your favorite Recipe</string>
</resources>