<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".ui.profile.ProfileFragment">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="155dp"
        android:layout_height="128dp"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:textColor="@color/blue"
        android:id="@+id/textViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/profile_setting"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <RelativeLayout
        android:id="@+id/relative_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewProfile">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/picture_user"
            android:src="@drawable/ic_account_circle" />

        <TextView
            android:fontFamily="@font/montserrat_bold"
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@id/iv_profile"
            android:maxLines="1"
            android:text="@string/name"
            android:textSize="18sp" />

        <TextView
            android:fontFamily="@font/montserrat_regular"
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/iv_profile"
            android:maxLines="1"
            android:text="@string/username"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/editButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/edit"
            android:src="@drawable/ic_edit" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/relative_layout1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_email"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/picture_user"
            android:src="@drawable/ic_email" />

        <TextView
            android:fontFamily="@font/montserrat_bold"
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@id/iv_email"
            android:maxLines="1"
            android:text="@string/email_hint"
            android:textSize="18sp" />

        <TextView
            android:fontFamily="@font/montserrat_regular"
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/iv_email"
            android:maxLines="1"
            android:text="@string/email"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/editButton2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/edit"
            android:src="@drawable/ic_edit"
            tools:ignore="DuplicateIds" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>